Add benchmarking script with docs and go version
The vast majority of the script was vibe coded with Claude!

The go version was also mostly written by Claude, with small tweaks done
manually afterwards.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 .zig-cache
 zig-out
+
+# Benchmark files
+bench-tmp/
+benchmark-results/
+ghl
+zhl-*
+benchmark*.csv
+benchmark*.json
+benchmark*.md
